# safexbets

./: .env.example  .gitattributes  .gitignore  Anchor.toml  README.md  package.json
app/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/docs/: SPORTSBOOK-UX-NOTES.md
app/public/replay/: metrica-clip.json
app/scripts/: check-normalizer.mjs
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/: AppHeader.tsx  BetModal.tsx  ConfigBanner.tsx  Countdown.tsx  DemoControls.tsx  MarketCard.tsx  MarketsBoard.tsx  OddsCompare.tsx  PitchBackdrop.tsx  PoolBar.tsx  Portfolio.tsx  StatusBadge.tsx  Toast.tsx
app/src/fixtures/: replay-18187298.json  txline.json
app/src/hooks/: useMarkets.ts  useNow.ts  usePositions.ts  useProgram.ts  useTokenBalance.ts
app/src/idl/: README.md  safexbets.json
app/src/lib/: anchor.ts  config.ts  constants.ts  errors.ts  format.ts  lobby.ts  market-view.ts  pdas.ts  program.ts  (+3 more)
config/: network.ts
docs/: MAC-SETUP.md  PLAN.md  SPEC.md  TXLINE-API.md
keypairs/: .gitkeep
programs/safexbets/: Cargo.toml
programs/safexbets/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/safexbets/src/instructions/: accrue.rs  claim.rs  initialize_market.rs  mod.rs  place_bet.rs  settle.rs  withdraw.rs
relayer/: README.md  package-lock.json  package.json  tsconfig.json
relayer/fixtures/: txline.sample.json
relayer/src/: anchorClient.ts  config.ts  index.ts  keeper.ts  seed.ts  settle.ts  txline.ts
tests/: safexbets.ts
(+29 files in other folders)
