[package]
name = "safexbets"
version = "0.1.0"
description = "No-loss World Cup prediction market settled by TxLINE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "safexbets"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
